# study-mba-em-engenharia-de-software-com-ia-prompt-engineering

./: .env.example  .gitignore  README.md  pyproject.toml  test_cli.sh
docs/: 01-introducao.md  02-role-prompting.md  06-skeleton-of-thought.md  10-react.md
docs/01-iniciando/: 08-self-consistency.md
docs/01-iniciando/01-introducao/: resumo.md
docs/01-iniciando/02-role-prompting/: post.md  resumo.md
docs/01-iniciando/03-zero-shot/: post.md  resumo.md
docs/01-iniciando/04-one-few-shot/: post.md  resumo.md
docs/01-iniciando/05-chain-of-thought/: post.md  resumo.md
docs/01-iniciando/06-skeleton-of-thought/: post.md  resumo.md
docs/01-iniciando/07-tree-of-thought/: post.md  resumo.md
docs/01-iniciando/08-self-consistency/: post.md  resumo.md
docs/01-iniciando/09-directional-stimulus/: post.md  resumo.md
docs/01-iniciando/10-react/: post.md  resumo.md
docs/02-conceitos/01-context-window/: post.md  resumo.md
docs/02-conceitos/02-truncamento/: post.md  resumo.md
docs/02-conceitos/03-sumarizacao/: post.md  resumo.md
docs/02-conceitos/04-sliding-window/: post.md  resumo.md
docs/02-conceitos/05-prompt-caching/: post.md  resumo.md
docs/02-conceitos/06-batch-prompting/: post.md  resumo.md
docs/iniciando/: 03-zero-shot.md  04-one-few-shot.md  05-chain-of-thought.md  07-tree-of-thought.md  09-directional-stimulus.md
docs/iniciando/01-introducao/: resumo.md
docs/iniciando/introducao/: post.md  resumo.md
src/: cli_utils.py  runner.py  utils.py
src/exercises/: 01-Role-prompting.py  01.py  02-zero-shot.py  02.py  03-one-few-shot.py  03.py  04-CoT.py  05-CoT-Self-consistency.py  06-ToT.py  07-SoT.py  08-ReAct.py  09-Prompt-channing.py  10-Least-to-most.py
